<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frag_home"
    android:id="@+id/homeLayout"
>

    <TextView
        android:id="@+id/initialAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text=""
        android:visibility="visible"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/addExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="111dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/quantity_expense_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/startExpenseButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputExpense"
        android:layout_width="155dp"
        android:layout_height="52dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:hint="@string/badge"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/startExpenseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpense"
        android:inputType="numberDecimal"/>

</androidx.constraintlayout.widget.ConstraintLayout>
