<resources>
    <string name="app_name">Soldi</string>
    <string name="briefDescription">Time is gold!</string>
    <string name="home">Home</string>
    <string name="analysis">Analysis</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="firstTime">Here you can insert your first expense</string>

    <string name="addingExpense">Adding expense</string>
    <string name="confirmExpense">Confirm expense</string>

    //Accessibility for blind people
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="backButton">Navigate up</string>

    <string name="quantity_expense_title">How much?</string>
    <string name="expense_type_title">What?</string>
    <string name="payment_method_title">How?</string>
    <string name="confirm_expense_title">Is it okay?</string>

    <string name="or">or</string>

    <string name="supermarket_type">Supermarket</string>
    <string name="transport_type">Transport</string>
    <string name="leisure_type">Leisure</string>
...
