...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background='@color/frag_paym'>
    <!--#ff6-->

    <ImageView
        android:id="@+id/cashPaymentButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="230dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textOrPayment"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/josefin_sans_bold"
...
