...
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/transport_type"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transportTypeButton" />

    <TextView
        android:id="@+id/textLeisure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
...
        android:layout_marginStart="40dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/transport"
        app:layout_constraintEnd_toStartOf="@+id/supermarketTypeButton"
        app:layout_constraintStart_toEndOf="@+id/leisureTypeButton"
        app:layout_constraintTop_toBottomOf="@+id/textExpenseType" />

    <ImageView
        android:id="@+id/supermarketTypeButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
...
